--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rick & Morty App</title>
+  <title>Rick & Morty - ES5</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -13,10 +13,10 @@
 
   <section id="filters">
     <input type="text" id="name" placeholder="Name">
-    <input type="text" id="status" placeholder="Status (alive, dead, unknown)">
+    <input type="text" id="status" placeholder="Status">
     <input type="text" id="species" placeholder="Species">
     <input type="text" id="type" placeholder="Type">
-    <input type="text" id="gender" placeholder="Gender (male, female, genderless, unknown)">
+    <input type="text" id="gender" placeholder="Gender">
     <button id="filterBtn">Buscar</button>
     <button id="allBtn">Personajes</button>
   </section>
